--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,10 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
 
+    // AWS S3
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.691'
+    testImplementation "io.findify:s3mock_2.13:0.2.6"
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
