--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ configurations {
 
 repositories {
     mavenCentral()
+    // 아임포트 관련
+    maven {url 'https://jitpack.io'}
 }
 
 ext {
@@ -60,6 +62,9 @@ dependencies {
     // AWS S3
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.691'
     testImplementation "io.findify:s3mock_2.13:0.2.6"
+
+    // iamport
+    implementation 'com.github.iamport:iamport-rest-client-java:0.2.23'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
