--- a/todomon-batch/build.gradle
+++ b/todomon-batch/build.gradle
@@ -4,4 +4,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'org.springframework.batch:spring-batch-test'
     implementation 'org.modelmapper:modelmapper:3.2.0'
+    implementation 'org.springframework.boot:spring-boot-starter-quartz'
 }
