--- a/todomon-core/build.gradle
+++ b/todomon-core/build.gradle
@@ -3,6 +3,7 @@ ext {
 }
 
 dependencies {
+    implementation project(':todomon-infra')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
