--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       MYSQL_DATABASE: todomon         # 초기 생성할 데이터베이스 이름
       MYSQL_CHARSET: utf8mb4             # 기본 charset을 utf8mb4로 설정
       MYSQL_COLLATION: utf8mb4_unicode_ci # 기본 collation을 utf8mb4_unicode_ci로 설정
+      TZ: Asia/Seoul
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     ports:
       - "3305:3306"  # 호스트의 3306 포트를 컨테이너의 3306 포트와 연결
