--- a/todomon-batch/build.gradle
+++ b/todomon-batch/build.gradle
@@ -6,4 +6,10 @@ dependencies {
     testImplementation 'org.springframework.batch:spring-batch-test'
     implementation 'org.modelmapper:modelmapper:3.2.0'
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
+
+    // Async
+    implementation "org.springframework.batch:spring-batch-integration"
+
+    // Spring Batch Experimental
+    implementation "org.springframework.batch:spring-batch-experimental:0.3.0"
 }
