--- a/todomon-core/build.gradle
+++ b/todomon-core/build.gradle
@@ -1,3 +1,10 @@
+plugins {
+    id 'java'
+    id 'org.springframework.boot' version '3.3.1'
+    id 'io.spring.dependency-management' version '1.1.5'
+    id "com.gorylenko.gradle-git-properties" version "2.4.1"
+}
+
 ext {
     set('snippetsDir', file("build/generated-snippets"))
 }
@@ -7,6 +14,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+    // micrometer-prometheus
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 
     // security
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
