--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   mysql:
     image: mysql:8.0
@@ -11,11 +10,11 @@ services:
       TZ: Asia/Seoul
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     ports:
-      - "3305:3306"  # 호스트의 3306 포트를 컨테이너의 3306 포트와 연결
+      - "3305:3306"
     volumes:
-      - mysql_data:/var/lib/mysql  # 데이터를 지속하기 위한 볼륨 설정
+      - mysql_data:/var/lib/mysql
     networks:
-      - spring-mysql-network
+      - todomon-network
 
   todomon-app:
     image: todomon-app
@@ -23,8 +22,10 @@ services:
     ports:
       - "8080:8080"
       - "9292:9292"
+    volumes:
+      - ./todomon-core/build/libs/todomon-app.jar:/app/todomon-app.jar  # JAR 파일을 컨테이너에 매핑
     networks:
-      - spring-mysql-network
+      - todomon-network
     depends_on:
       - mysql
 
@@ -36,7 +37,7 @@ services:
     ports:
       - "9090:9090"
     networks:
-      - spring-mysql-network
+      - todomon-network
     depends_on:
       - todomon-app
 
@@ -48,14 +49,37 @@ services:
     volumes:
       - grafana_data:/var/lib/grafana
     networks:
-      - spring-mysql-network
+      - todomon-network
     depends_on:
       - prometheus
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor
+    container_name: cadvisor
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+      - /dev/disk/:/dev/disk:ro
+    ports:
+      - "8081:8080"
+    networks:
+      - todomon-network
+  redis:
+    image: "redis:latest"
+    container_name: redis-container
+    ports:
+      - "6379:6379"  # Redis 기본 포트 매핑
+    volumes:
+      - redis-data:/data  # Redis 데이터를 유지할 볼륨
+    networks:
+      - todomon-network
 
 networks:
-  spring-mysql-network:
+  todomon-network:
     driver: bridge
 
 volumes:
   mysql_data:
   grafana_data:
+  redis-data:
