--- a/prometheus.yml
+++ b/prometheus.yml
@@ -14,3 +14,6 @@ scrape_configs:
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: [ 'todomon-app:9292' ]  # Spring Boot 앱의 컨테이너 또는 호스트 주소
+  - job_name: 'cadvisor'
+    static_configs:
+      - targets: [ 'cadvisor:8080' ]
