--- a/todomon-core/build.gradle
+++ b/todomon-core/build.gradle
@@ -16,6 +16,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+    // Redis
+    implementation "org.springframework.boot:spring-boot-starter-data-redis"
+
+    // test containers
+    testImplementation "org.junit.jupiter:junit-jupiter:5.8.1"
+    testImplementation "org.testcontainers:testcontainers:1.20.1"
+    testImplementation "org.testcontainers:junit-jupiter:1.20.1"
+
+
     // micrometer-prometheus
     implementation 'io.micrometer:micrometer-registry-prometheus'
 
@@ -50,4 +59,8 @@ dependencies {
 
 tasks.named('clean') {
     delete file('src/main/generated')
+}
+
+bootJar {
+    archiveFileName = 'todomon-app.jar'
 }
