--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,14 @@ services:
       TZ: Asia/Seoul
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     ports:
-      - "3305:3306"
+      - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
       - todomon-network
 
   todomon-app:
-    image: todomon-app
+    build: ./todomon-core
     container_name: todomon-app-container
     ports:
       - "8080:8080"
@@ -28,6 +28,7 @@ services:
       - todomon-network
     depends_on:
       - mysql
+      - redis
 
   prometheus:
     image: prom/prometheus:latest
