--- a/prometheus.yml
+++ b/prometheus.yml
@@ -13,7 +13,7 @@ scrape_configs:
   - job_name: 'spring-boot-actuator'
     metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: [ 'todomon-app:9292' ]  # Spring Boot 앱의 컨테이너 또는 호스트 주소
-  - job_name: 'cadvisor'
-    static_configs:
-      - targets: [ 'cadvisor:8080' ]
+      - targets: [ 'todomon-app:9290' ]  # Spring Boot 앱의 컨테이너 또는 호스트 주소
+#  - job_name: 'cadvisor'
+#    static_configs:
+#      - targets: [ 'cadvisor:8080' ]
