feat: PaymentService Error Handling & Refactoring

--- a/todomon-infra/build.gradle
+++ b/todomon-infra/build.gradle
@@ -11,4 +11,6 @@ jar {
 dependencies {
     // email
     implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
 }
