--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,6 +118,26 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf  # Nginx 설정 파일을 로드
 
+  # === Kafka ===
+  zookeeper:
+    image: wurstmeister/zookeeper
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+
+  kafka:
+    image: wurstmeister/kafka
+    container_name: kafka
+    ports:
+      - "9092:9092"
+      - "29092:29092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    depends_on:
+      - zookeeper
 
 networks:
   todomon-network:
