--- a/todomon-core/build.gradle
+++ b/todomon-core/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.691'
     testImplementation "io.findify:s3mock_2.13:0.2.6"
 
+    // Kafka
+    implementation 'org.springframework.kafka:spring-kafka'
+
     testImplementation 'org.springframework.security:spring-security-test'
 }
 
