--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -139,6 +139,39 @@ services:
     depends_on:
       - zookeeper
 
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.10.0
+    container_name: elasticsearch
+    ports:
+      - "9200:9200"
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - xpack.security.http.ssl.enabled=false
+    volumes:
+      - es-data:/usr/share/elasticsearch/data
+
+  logstash:
+    image: docker.elastic.co/logstash/logstash:8.10.0
+    container_name: logstash
+    ports:
+      - "5044:5044"      # Logstash beats input port
+      - "9600:9600"      # Logstash monitoring API port
+    volumes:
+      - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+    environment:
+      - xpack.monitoring.enabled=false
+
+  kibana:
+    image: kibana:8.10.1
+    container_name: kibana
+    ports:
+      - "5601:5601"
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    depends_on:
+      - elasticsearch
+
 networks:
   todomon-network:
     driver: bridge
@@ -147,3 +180,4 @@ volumes:
   mysql_data:
   grafana_data:
   redis-data:
+  es-data:
