--- a/todomon-core/build.gradle
+++ b/todomon-core/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     // Kafka
     implementation 'org.springframework.kafka:spring-kafka'
 
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
+
     testImplementation 'org.springframework.security:spring-security-test'
 }
 
